alle jobs worden nu uitgevoerd met nieuwe setup